syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupEdu";
option java_outer_classname = "Pix";

package br.com.zupEdu;

service PixService {
  rpc send (PixRequest) returns (PixReply) {}

  rpc gerarChavePix(ChavePixRequest) returns (ChavePixResponse) {}

  rpc apagarChavePix(ChavePixApagarRequest) returns (ChavePixApagadaResponse) {}
}

enum TipoChavePix {
  DESCONHECIDO_TIPO_CHAVE_PIX = 0;
  TELEFONE_CELULAR= 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
  CPF = 4;
}

enum TipoConta {
    DESCONHECIDO_TIPO_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

message ChavePixRequest {
  string idCliente = 1;
  TipoChavePix tipoChavePix = 2;
  string chave = 3;
  TipoConta tipoDeConta = 4;
}

message ChavePixResponse {
  string clientid = 1;
  string pixId = 2;
}

message ChavePixApagarRequest {
  string pixId = 1;
  string clientid = 2;
}

message ChavePixApagadaResponse {
  string message = 1;
}

message PixRequest {
  string name = 1;
}

message PixReply {
  string message = 1;
}